media/heimdall/heimdall-ingressroute.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-dashboard-tls
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: heimdall
          port: 80
          namespace: media
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-dashboard
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homepage.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: heimdall
          port: 80
          namespace: media
